package question1;

public interface Serializer {

    public  String name();

    public Integer size();

    public void write();
}
