@startuml

interface Serializer{
    String name()
    Integer size()
    void write()
}
class FileSerialiser{
    String name
    String caract
    String name()
        Integer size()
        void write()
}

class ScreenSerializer{
    String name
        String caract
        String name()
            Integer size()
            void write()

}

Serializer <.. ScreenSerializer
Serializer <.. FileSerialiser
@enduml